@@ -133,7 +133,7 @@ if( WITH_PLAYER )
         macro_log_feature( LIBOFA_FOUND "libofa" "Enable MusicDNS service" "http://code.google.com/p/musicip-libofa/" FALSE "0.9.x" "" )
         macro_bool_to_01( LIBOFA_FOUND HAVE_LIBOFA )
     endif( FFMPEG_FOUND )
-    
+
     ##gpodder Service
     macro_optional_find_package( Mygpo-qt )
     macro_log_feature( LIBMYGPO_QT_FOUND "libmygpo-qt" "Enable gpodder.net service" "http://wiki.gpodder.org/wiki/Libmygpo-qt" FALSE "1.0.5" "" )
@@ -142,11 +142,11 @@ if( WITH_PLAYER )
     if( WITH_IPOD )
         find_package(Ipod)
         if( IPOD_FOUND AND NOT WIN32 )
-            macro_ensure_version("0.7.0" ${IPOD_VERSION} IPOD_FOUND)
+            macro_ensure_version("0.7.93" ${IPOD_VERSION} IPOD_FOUND)
         endif( IPOD_FOUND AND NOT WIN32 )
-        macro_log_feature( IPOD_FOUND "libgpod" "Support Apple iPod audio devices" "http://sourceforge.net/projects/gtkpod/" FALSE "0.7.0" "" )
-	macro_optional_find_package(GDKPixBuf)
-	macro_log_feature( GDKPIXBUF_FOUND "GDK-PixBuf" "Support for artwork on iPod audio devices via GDK-PixBuf" "http://developer.gnome.org/arch/imaging/gdkpixbuf.html" FALSE "2.0.x" "" )
+        macro_log_feature( IPOD_FOUND "libgpod" "Support Apple iPod audio devices" "http://sourceforge.net/projects/gtkpod/" FALSE "0.7.93" "" )
+        macro_optional_find_package(GDKPixBuf)
+        macro_log_feature( GDKPIXBUF_FOUND "GDK-PixBuf" "Support for artwork on iPod audio devices via GDK-PixBuf" "http://developer.gnome.org/arch/imaging/gdkpixbuf.html" FALSE "2.0.x" "" )
     endif( WITH_IPOD )
 
     macro_optional_find_package(Mtp)
