@@ -6,6 +6,7 @@ Version 2.6-Beta 1
   FEATURES:
 
   CHANGES:
+    * libgpod requirement raised from 0.7.0 to 0.7.93 for better maintainability.
 
   BUGFIXES:
 
